# SportsBetManager-Improved

./: BetList.cpp  BetList.h  CMakeLists.txt  Date.cpp  Date.h  LinkedListNode.cpp  LinkedListNode.h  OverUnder.cpp  OverUnder.h  Prop.cpp  Prop.h  README.md  SportsBet.cpp  SportsBet.h  SportsBetManager.cpp  SportsBetManager.h  Spread.cpp  Spread.h  UserInterface.cpp
